# modbus_gateway

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.IO  README.md  README.ota_https.md  partitions.csv  sdkconfig
hardware/: eagle.epf  untitled.brd  untitled.pro  untitled.sch
hardware/7.x/: untitled.brd  untitled.sch
main/: CMakeLists.txt  Kconfig.projbuild  blufi_example.h  ds1307.c  ds1307.h  ds18b20.c  ds18b20.h  ds3231.c  ds3231.h  esp32_malloc.c  esp32_malloc.h  http_server.c  http_server.h  i2cdev.c  i2cdev.h  icmp_echo.c  icmp_echo.h  lcd204-i2c.cpp  lcd204-i2c.hpp  led.c  led.h  main.cpp  modbus_data.c  modbus_data.h  modbus_rtu_master.c  modbus_rtu_master.h  modbus_tcp2serial.c  modbus_tcp2serial.h  modbus_tcp_slave.c  modbus_tcp_slave.h  network.c  network.h  ota_ble.c  ota_ble.h  ota_https.c  ota_https.h  pcf8574.cpp  pcf8574.hpp  sdmmc.c  sdmmc.h  (+2 more)
server_certs/: create_certification.sh  run_server.sh
